--- a/index.html
+++ b/index.html
@@ -14,24 +14,45 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./img/Logo_fondonegro.png" type="image/x-icon">
-    
+    <link
+      rel="shortcut icon"
+      href="./img/Logo_fondonegro.png"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <!-- Brand/logo -->
-        <a class="navbar-brand" href="#"><div class="img-container"><img src="./img/Logo_fondonegro.png" alt="Logo Alta Gama Cerrajeria"></div></a>
-        
+    <nav
+      class="
+        nav-normal
+        navbar navbar-expand-sm
+        sticky-top
+        justify-content-between
+      "
+    >
+      <!-- Brand/logo -->
+      <a class="navbar-brand justify-content-first" href="#"
+        ><div class="img-container-logo">
+          <img
+            src="./img/Logo_fondonegro.png"
+            alt="Logo Alta Gama Cerrajeria"
+          /></div
+      ></a>
+
         <!-- Links -->
         <ul class="navbar-nav">
+            <li class="nav-item">Serv.Técnico 24H</li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link 1</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link 2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link 3</a>
-          </li>
+            <a class="nav-link" href="tel:+5493514646797"><i class="fas fa-phone-volume"></i>351 4646797</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="https://wa.me/5493514646797"><i class="fab fa-whatsapp"></i>+54 9 351 4646797</a>
+        </li>
         </ul>
       </nav>
         <div class="container-fluid" id="slider">
