--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./img/Logo_fondonegro.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./img/Logo_fondonegro.png"
+      type="image/x-icon"
+    />
     <link
       rel="shortcut icon"
       href="./img/Logo_fondonegro.png"
@@ -23,9 +27,13 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
-      crossorigin="anonymous"/>
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav
@@ -33,7 +41,7 @@
         nav-normal
         navbar navbar-expand-sm
         sticky-top
-        justify-content-between
+        justify-content-around
       "
     >
       <!-- Brand/logo -->
@@ -45,19 +53,25 @@
           /></div
       ></a>
 
-        <!-- Links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">Serv.Técnico 24H</li>
-          <li class="nav-item">
-            <a class="nav-link" href="tel:+5493514646797"><i class="fas fa-phone-volume"></i>351 4646797</a>
+      <!-- Links -->
+      <ul class="navbar-nav">
+        <div class="serv-tecnico">
+        <li class="nav-item">Servicio Técnico 24hrs</li>
+    </div>
+        <li class="nav-item">
+          <a target="_blank" class="nav-link" href="tel:+5493514646797"
+            ><i class="fas fa-phone-volume"></i>351 4646797</a
+          >
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="https://wa.me/5493514646797"><i class="fab fa-whatsapp"></i>+54 9 351 4646797</a>
+          <a target="_blank" class="nav-link" href="https://wa.me/5493514646797"
+            ><i class="fab fa-whatsapp"></i>+54 9 351 4646797</a
+          >
         </li>
-        </ul>
-      </nav>
-        <div class="container-fluid" id="slider">
-            <h1>Cerrajeria Alta Gama</h1>
-        </div>
+      </ul>
+    </nav>
+    <div class="container-fluid" id="slider">
+      <h1>Cerrajeria Alta Gama</h1>
+    </div>
   </body>
 </html>
