--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         nav-normal
         navbar navbar-expand-sm
         sticky-top
-        justify-content-around
+
       "
     >
       <!-- Brand/logo -->
-      <a class="navbar-brand justify-content-first" href="#"
+      <a class="navbar-brand justify-content-center" href="#"
         ><div class="img-container-logo">
           <img
             src="./img/Logo_fondonegro.png"
@@ -54,7 +54,7 @@
       ></a>
 
       <!-- Links -->
-      <ul class="navbar-nav">
+      <ul class="navbar-nav justify-content-end">
         <div class="serv-tecnico">
         <li class="nav-item">Servicio Técnico 24hrs</li>
     </div>
