--- a/index.html
+++ b/index.html
@@ -70,8 +70,33 @@
         </li>
       </ul>
     </nav>
-    <div class="container-fluid" id="slider">
-      <h1>Cerrajeria Alta Gama</h1>
-    </div>
+    <div id="demo" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+          <li data-target="#demo" data-slide-to="0" class="active"></li>
+          <li data-target="#demo" data-slide-to="1"></li>
+        </ul>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./img/automotor01.jpg" alt="Los Angeles" width="1100" height="500">
+            <div class="carousel-caption">
+              <h3>Servicio de emergencias</h3>
+              <p>Comunicate con nosotros las 24 horas</p>
+            </div>   
+          </div>
+          <div class="carousel-item">
+            <img src="./img/automotor02.jpg" alt="Chicago" width="1100" height="500">
+            <div class="carousel-caption">
+              <h3>Resolvemos tu problema</h3>
+              <p>BARRIO JARDÍN - CÓRDOBA</p>
+            </div>   
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </a>
+      </div>
   </body>
 </html>
