--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
         </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/automotor01.jpg" alt="Los Angeles" width="1100" height="500">
+            <img src="./img/automotor01.png" alt="Los Angeles" width="1100" height="500">
             <div class="carousel-caption">
               <h3>Servicio de emergencias</h3>
               <p>Comunicate con nosotros las 24 horas</p>
             </div>   
           </div>
           <div class="carousel-item">
-            <img src="./img/automotor02.jpg" alt="Chicago" width="1100" height="500">
+            <img src="./img/automotor02.png" alt="Chicago" width="1100" height="500">
             <div class="carousel-caption">
               <h3>Resolvemos tu problema</h3>
               <p>BARRIO JARDÍN - CÓRDOBA</p>
