--- a/index.html
+++ b/index.html
@@ -84,11 +84,9 @@
             </div>   
           </div>
           <div class="carousel-item">
-            <img src="./img/automotor02.png" alt="Chicago" width="1100" height="500">
-            <div class="carousel-caption">
-              <h3>Resolvemos tu problema</h3>
-              <p>BARRIO JARDÍN - CÓRDOBA</p>
-            </div>   
+            <div class="container-img">
+              <h1>Hola</h1>
+            </div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#demo" data-slide="prev">
@@ -97,6 +95,10 @@
         <a class="carousel-control-next" href="#demo" data-slide="next">
           <span class="carousel-control-next-icon"></span>
         </a>
+      </div>
+
+      <div class="container-img">
+        <h1>Hola</h1>
       </div>
   </body>
 </html>
