--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Menú</a>
-            <a class="nav-link" href="#">Servicios</a>
+            <a class="nav-link" href="#services">Servicios</a>
             <a class="nav-link" href="#">Contacto</a>
           </div>
         </div>
@@ -78,16 +78,20 @@
     <div class="carousel-item active">
       <div class="container-img-1">
         <div class="carousel-caption">
-          <h3>Cerrajería del automotor</h3>
-          <p>Comunicate con nosotros las 24 horas</p>
+          <div class="caption">
+          <h3>Servicio de emergencia 24 horas</h3>
+          <p>Comunicate con nosotros</p>
+        </div>
         </div>
       </div> 
     </div>
     <div class="carousel-item">
       <div class="container-img-2">
         <div class="carousel-caption">
+          <div>
           <h3>Reparación y colocación de levanta cristales eléctricos</h3>
           <p>Consulta presupuesto para tu auto</p>
+          </div>
         </div>
       </div> 
     </div>
@@ -100,8 +104,41 @@
   <a class="carousel-control-next" href="#demo" data-slide="next">
     <span class="carousel-control-next-icon"></span>
   </a>
-
 </div>
+
+<div class="services" id="services">
+  <h3 class="service-title">Servicios</h3>
+
+  <div class="cards-container">
+    <div class="card" style="width: 25rem;">
+      <img src="img/card01.jpg" class="card-img-top"  alt="Cambiando ventana del auto">
+        <div class="card-body">
+        <p>Cambio de cristales</p>
+        </div>
+    </div> 
+    <div class="card" style="width: 25rem;">
+      <img src="img/card02.jpg" class="card-img-top" alt="Llave de auto">
+        <div class="card-body">
+        <p>Cerrajería del automotor</p>
+    </div>
+    </div>
+    <div class="card" style="width: 25rem;">
+      <img src="img/card03.jpg" class="card-img-top" alt="Levanta cristales eléctrico">
+        <div class="card-body">
+        <p>Reparación y colocación de levanta cristales eléctricos</p>
+        </div>
+  </div> 
+</div>
+</div>
+
+<footer>
+  <div class="footer">
+    <div class="logo-footer">
+      <img src="img/Logo_fondonegro.png" alt="">
+    </div>
+
+  </div>
+</footer>
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
