--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#">Menú</a>
             <a class="nav-link" href="#services">Servicios</a>
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#contact">Contacto</a>
           </div>
         </div>
       </div>
@@ -128,6 +128,15 @@
         <p>Reparación y colocación de levanta cristales eléctricos</p>
         </div>
   </div> 
+</div>
+</div>
+
+<div class="contact" id="contact">
+<div class="map">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3403.6998328770187!2d-64.1714838850059!3d-31.449929581393008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2dfb78062f5%3A0x8a6cd35431e05c72!2sAlta%20Gama%20Cerrajer%C3%ADa!5e0!3m2!1ses!2sar!4v1626712393315!5m2!1ses!2sar"  width="100%" height="500px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</div>
+<div class="contact-info">
+
 </div>
 </div>
 
