--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="container-img-1">
         <div class="carousel-caption">
           <div class="caption">
-          <h3>Servicio de emergencia 24 horas</h3>
+          <h3>Servicio de emergencias 24 horas</h3>
           <p>Comunicate con nosotros</p>
         </div>
         </div>
@@ -88,7 +88,7 @@
     <div class="carousel-item">
       <div class="container-img-2">
         <div class="carousel-caption">
-          <div>
+          <div class="caption">
           <h3>Reparación y colocación de levanta cristales eléctricos</h3>
           <p>Consulta presupuesto para tu auto</p>
           </div>
