--- a/index.html
+++ b/index.html
@@ -141,10 +141,14 @@
 </div>
 
 <footer>
-  <div class="footer">
+  
+    <div class="redes">
+      <i class="fab fa-instagram"></i>
+      <i class="fab fa-facebook-square"></i>
+    </div>
     <div class="logo-footer">
       <img src="img/Logo_fondonegro.png" alt="">
-    </div>
+
 
   </div>
 </footer>
