--- a/index.html
+++ b/index.html
@@ -1,58 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alta Gama</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="shortcut icon"
-      href="./img/Logo_fondonegro.png"
-      type="image/x-icon"
-    />
-    <link
-      rel="shortcut icon"
-      href="./img/Logo_fondonegro.png"
-      type="image/x-icon"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <div class="top-bar">
-        <i class="fas fa-phone"></i>
-        <a href="tel:+549351464797"><span>3541 4646797</span></a>
-        <span class="mx-2">|</span>
-        <a href="https://wa.me/543514646797"><span>+54 9 351 4646797</span></a>
-        <i class="fab fa-whatsapp"></i>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Alta Gama</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" href="./img/Logo_fondonegro.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="./img/Logo_fondonegro.png" type="image/x-icon" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <header>
+    <div class="top-bar">
+      <i class="fas fa-phone"></i>
+      <a href="tel:+549351464797"><span>3541 4646797</span></a>
+      <span class="mx-2">|</span>
+      <a href="https://wa.me/543514646797"><span>+54 9 351 4646797</span></a>
+      <i class="fab fa-whatsapp"></i>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <div class="navbar-brand" >
-          <a href="#" >
+        <div class="navbar-brand">
+          <a href="#">
             <img src="img/logo_fondoblanco.png" alt="Logo Alta Gama" class="logo-img">
           </a>
         </div>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -73,87 +58,100 @@
       <li data-target="#demo" data-slide-to="0" class="active"></li>
       <li data-target="#demo" data-slide-to="1"></li>
     </ul>
-  
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <div class="container-img-1">
-        <div class="carousel-caption">
-          <div class="caption">
-          <h3>Servicio de emergencias 24 horas</h3>
-          <p>Comunicate con nosotros</p>
-        </div>
-        </div>
-      </div> 
-    </div>
-    <div class="carousel-item">
-      <div class="container-img-2">
-        <div class="carousel-caption">
-          <div class="caption">
-          <h3>Reparación y colocación de levanta cristales eléctricos</h3>
-          <p>Consulta presupuesto para tu auto</p>
+
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="container-img-1">
+          <div class="carousel-caption">
+            <div class="caption">
+              <h3>Servicio de emergencias 24 horas</h3>
+              <p>Comunicate con nosotros</p>
+            </div>
           </div>
         </div>
-      </div> 
+      </div>
+      <div class="carousel-item">
+        <div class="container-img-2">
+          <div class="carousel-caption">
+            <div class="caption">
+              <h3>Reparación y colocación de levanta cristales eléctricos</h3>
+              <p>Consulta presupuesto para tu auto</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#demo" data-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </a>
+  </div>
+
+  <div class="servicios">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-12 col-md-4 col-lg-4 pb-2">
+          <div class="card">
+            <img src="img/card01.jpg" height="200px" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Cambio de cristales</h4>
+              <p class="card-text">Some example text.</p>
+              <a href="#" class="btn btn-primary">Info</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-4 pb-2">
+          <div class="card">
+            <img src="img/card03.jpg" height= "200px" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Reparación y colocación de levanta cristales eléctricos</h4>
+              <p class="card-text">Some example text.</p>
+              <a href="#" class="btn btn-primary">Info</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-4 pb-2">
+          <div class="card">
+            <img src="img/card02.jpg" height="200px" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Cerrajería del automotor</h4>
+              <p class="card-text">Some example text.</p>
+              <a href="#" class="btn btn-primary">Info</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  </div>
+  
+
+  <div class="contact" id="contact">
+    <div class="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3403.6998328770187!2d-64.1714838850059!3d-31.449929581393008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2dfb78062f5%3A0x8a6cd35431e05c72!2sAlta%20Gama%20Cerrajer%C3%ADa!5e0!3m2!1ses!2sar!4v1626712393315!5m2!1ses!2sar"
+        width="100%" height="500px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
   </div>
 
-  <!-- Left and right controls -->
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
-</div>
-
-<div class="services" id="services">
-  <h3 class="service-title">Servicios</h3>
-
-  <div class="cards-container">
-    <div class="card" style="width: 25rem;">
-      <img src="img/card01.jpg" class="card-img-top"  alt="Cambiando ventana del auto">
-        <div class="card-body">
-        <p>Cambio de cristales</p>
-        </div>
-    </div> 
-    <div class="card" style="width: 25rem;">
-      <img src="img/card02.jpg" class="card-img-top" alt="Llave de auto">
-        <div class="card-body">
-        <p>Cerrajería del automotor</p>
-    </div>
-    </div>
-    <div class="card" style="width: 25rem;">
-      <img src="img/card03.jpg" class="card-img-top" alt="Levanta cristales eléctrico">
-        <div class="card-body">
-        <p>Reparación y colocación de levanta cristales eléctricos</p>
-        </div>
-  </div> 
-</div>
-</div>
-
-<div class="contact" id="contact">
-<div class="map">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3403.6998328770187!2d-64.1714838850059!3d-31.449929581393008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2dfb78062f5%3A0x8a6cd35431e05c72!2sAlta%20Gama%20Cerrajer%C3%ADa!5e0!3m2!1ses!2sar!4v1626712393315!5m2!1ses!2sar"  width="100%" height="500px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</div>
-<div class="contact-info">
-
-</div>
-</div>
-
-<footer>
-  
-    <div class="redes">
+  <footer>
+    <div class="redes text-center">
       <i class="fab fa-instagram"></i>
       <i class="fab fa-facebook-square"></i>
     </div>
     <div class="logo-footer">
       <img src="img/Logo_fondonegro.png" alt="">
+    </div>
+  </footer>
 
 
-  </div>
-</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+</body>
 
-
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </body>
 </html>
